src/index.css
@import "tailwindcss";

@font-face {
  font-family: "Inter";
  src: url("/Inter-Regular.woff2") format("woff2");
  font-weight: 400;
}

@font-face {
  font-family: "Inter";
  src: url("/Inter-Medium.woff2") format("woff2");
  font-weight: 500;
}

@font-face {
  font-family: "Inter";
  src: url("/Inter-SemiBold.woff2") format("woff2");
  font-weight: 600;
}

@font-face {
  font-family: "Inter";
  src: url("/Inter-Bold.woff2") format("woff2");
  font-weight: 700;
}

body {
  font-family: "Inter", sans-serif;
  background-color: #1c1c2b;
}

@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

.carousel-scroll {
  animation: scroll 20s linear infinite;
}

@keyframes circleReveal {
  from {
    clip-path: circle(150% at 50% 50%);
  }
  to {
    clip-path: circle(0% at 50% 50%);
  }
}

.reveal-overlay {
  animation: circleReveal 2s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
}

